--- a/settings.json
+++ b/settings.json
@@ -6,13 +6,13 @@
 "autoplaymusic": false,
 "autocomposing": false,
 "autorecording": false,
-"BotName":"Doge Bot", 
-"NomorOwner":"916909137213", 
-"NomorOwner2":"+91 690-913-7213", 
-"NamaOwner":"Xeon", 
-"Dana":"6909137213", 
-"Pulsa":"6909137213", 
-"Ovo":"6909137213", 
+"BotName":"BOT-ALSOLTAN", 
+"NomorOwner":"201288455338", 
+"NomorOwner2":"201288455338", 
+"NamaOwner":"YOUSSEF AL SOLTAN", 
+"Dana":"01288455338", 
+"Pulsa":"01288455338", 
+"Ovo":"01288455338", 
 "ZeksApi":"twBHoFu3AnqfE6f2rwAuirfTVgh",
 "Zerkey":"ZeroYT7",
 "HunterApi":"Ikyy69"
